--- a/css/styles_v3.css
+++ b/css/styles_v3.css
@@ -17,6 +17,12 @@
   padding-left: 5px;
 }
 
+.company-name {
+  font-family: 'Courier New', monospace;
+  font-style: oblique;
+  font-size: 2em;
+}
+
 li .page-scroll {
   font-size: 1.4em;
 }
