--- a/css/styles_v3.css
+++ b/css/styles_v3.css
@@ -17,6 +17,17 @@
   padding-left: 5px;
 }
 
+ul .dark.pad-right {
+  font-size: 1.2em;
+  color: #262626;
+  font-family: 'Avenir LT Std 35 Light';
+  text-align: left;
+}
+
+li {
+  padding-top: 1em;
+}
+
 .org-name {
   font-family: 'Courier New', monospace;
   font-style: oblique;
